--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@koa/router": "^11.0.2",
+    "@octokit/core": "^5.0.1",
+    "@octokit/types": "^12.0.0",
     "@t3-oss/env-core": "^0.7.1",
     "database": "workspace:*",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
+    "octokit": "^3.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/koa": "^2.13.10",
+    "@types/koa-bodyparser": "^4.3.11",
     "@types/koa__router": "^12.0.2",
     "@types/node": "^17.0.12",
     "config": "workspace:*",
