--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -15,6 +15,7 @@
     "@octokit/types": "^12.0.0",
     "@t3-oss/env-core": "^0.7.1",
     "database": "workspace:*",
+    "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "octokit": "^3.1.1",
