Add nodemon watcher

--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register --files src/index.ts",
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register --files src/index.ts",
     "build": "echo 'Add build script here'",
     "test": "echo 'Add test script here'",
     "lint": "echo 'Add lint script here'"
@@ -27,6 +27,7 @@
     "@types/koa__router": "^12.0.2",
     "@types/node": "^17.0.12",
     "config": "workspace:*",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "tsconfig": "workspace:*",
     "tsconfig-paths": "^4.2.0",
