--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register --files src/index.ts",
     "build": "echo 'Add build script here'",
     "test": "echo 'Add test script here'",
-    "lint": "echo 'Add lint script here'"
+    "lint": "eslint --fix .",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@koa/router": "^11.0.2",
@@ -20,6 +21,7 @@
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "octokit": "^3.1.1",
+    "smee-client": "^1.2.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/node": "^17.0.12",
     "config": "workspace:*",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "tsconfig": "workspace:*",
     "tsconfig-paths": "^4.2.0",
