--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -17,19 +17,23 @@
     "@octokit/rest": "^20.0.2",
     "@octokit/types": "^12.0.0",
     "@t3-oss/env-core": "^0.7.1",
+    "base32-encoding": "^1.0.0",
     "database": "workspace:*",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "octokit": "^3.1.1",
     "smee-client": "^1.2.3",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/base32-encoding": "^1.0.1",
     "@types/koa": "^2.13.10",
     "@types/koa-bodyparser": "^4.3.11",
     "@types/koa__router": "^12.0.2",
     "@types/node": "^17.0.12",
+    "@types/uuid": "^9.0.6",
     "config": "workspace:*",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
