--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -26,11 +26,15 @@
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "@t3-oss/env-core": "^0.7.1",
+    "base32-encoding": "^1.0.0",
     "core": "link:@t3-oss/env/core",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/base32-encoding": "^1.0.1",
     "@types/node": "^17.0.12",
+    "@types/uuid": "^9.0.6",
     "config": "workspace:*",
     "eslint": "^8.12.0",
     "prisma": "^5.4.2",
