--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -25,7 +25,8 @@
     "octokit": "^3.1.1",
     "openai": "^4.12.4",
     "smee-client": "^1.2.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
     "@types/koa": "^2.13.10",
