--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -18,6 +18,7 @@
     "@octokit/types": "^12.0.0",
     "@octokit/webhooks": "^12.0.3",
     "@t3-oss/env-core": "^0.7.1",
+    "axios": "^1.5.1",
     "database": "workspace:*",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
