--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
+    "langchain": "^0.0.173",
     "octokit": "^3.1.1",
     "openai": "^4.12.4",
     "smee-client": "^1.2.3",
