--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -27,6 +27,7 @@
     "octokit": "^3.1.1",
     "openai": "^4.12.4",
     "smee-client": "^1.2.3",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.21.4"
   },
@@ -35,6 +36,7 @@
     "@types/koa-bodyparser": "^4.3.11",
     "@types/koa__router": "^12.0.2",
     "@types/node": "^17.0.12",
+    "@types/uuid": "^9.0.6",
     "config": "workspace:*",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
