--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.454.0",
     "@koa/router": "^11.0.2",
     "@octokit/auth-app": "^6.0.1",
     "@octokit/core": "^5.0.1",
