--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.454.0",
+    "@aws-sdk/s3-request-presigner": "^3.454.0",
     "@koa/router": "^11.0.2",
     "@octokit/auth-app": "^6.0.1",
     "@octokit/core": "^5.0.1",
