Add "ui" package to dependencies and update tsconfig paths

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,10 +3,10 @@
   "compilerOptions": {
     "plugins": [{ "name": "next" }],
     "baseUrl": ".",
-    "rootDir": ".",
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "@ui/*": ["../../packages/ui/src/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
