--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,7 +6,7 @@
     "rootDir": ".",
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "paths": {
-      "~/*": ["./src/*"]
+      "@ui/*": ["../../packages/ui/src/*"],
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
