--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@tldraw/tldraw": "2.0.0-alpha.18",
     "clsx": "^2.0.0",
     "lucide-react": "^0.293.0",
+    "million": "^2.6.4",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
