--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tldraw/tldraw": "2.0.0-alpha.18",
+    "@tldraw/tldraw": "2.0.0-canary.699502d8c479",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "lucide-react": "^0.293.0",
     "million": "^2.6.4",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
