--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tldraw/tldraw": "2.0.0-canary.699502d8c479",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
