--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "million": "^2.6.4",
     "next": "^14.0.3",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.5",
     "react-dom": "^18.2.0",
     "ui": "workspace:*",
     "zod": "^3.22.4"
