--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -30,6 +30,7 @@
     "langchain": "^0.0.193",
     "octokit": "^3.1.1",
     "openai": "^4.19.0",
+    "puppeteer": "^21.5.2",
     "smee-client": "^1.2.3",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.21.4"
