Create lib package

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "agent",
+  "name": "lib",
   "version": "1.0.0",
-  "private": true,
-  "main": "index.ts",
-  "scripts": {
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register -r dotenv/config --files src/index.ts",
-    "build": "echo 'Add build script here'",
-    "test": "echo 'Add test script here'",
-    "lint": "eslint --fix .",
-    "prettier": "prettier --write ."
-  },
+  "license": "MIT",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
+  "scripts": {},
   "dependencies": {
     "@aws-sdk/client-s3": "^3.454.0",
     "@aws-sdk/s3-request-presigner": "^3.454.0",
     "@gomomento/sdk": "^1.51.1",
-    "@koa/router": "^11.0.2",
     "@octokit/auth-app": "^6.0.1",
     "@octokit/core": "^5.0.1",
     "@octokit/rest": "^20.0.2",
@@ -25,8 +19,6 @@
     "axios": "^1.5.1",
     "database": "workspace:*",
     "dotenv": "^16.3.1",
-    "koa": "^2.14.2",
-    "koa-bodyparser": "^4.4.1",
     "langchain": "^0.0.193",
     "octokit": "^3.1.1",
     "openai": "^4.19.0",
@@ -35,16 +27,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/koa": "^2.13.10",
-    "@types/koa-bodyparser": "^4.3.11",
-    "@types/koa__router": "^12.0.2",
     "@types/node": "^17.0.12",
     "config": "workspace:*",
-    "nodemon": "^3.0.1",
+    "eslint": "^8.12.0",
     "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
     "tsconfig": "workspace:*",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^4.5.5"
   }
 }
