Update references to lib package

--- a/apps/agent/tsconfig.json
+++ b/apps/agent/tsconfig.json
@@ -2,11 +2,11 @@
   "extends": "tsconfig/node.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "rootDir": ".",
     "outDir": "dist",
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "@lib/*": ["../../packages/lib/src/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "tsup.config.ts"],
