--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -28,6 +28,7 @@
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "langchain": "^0.0.193",
+    "lib": "workspace:*",
     "octokit": "^3.1.1",
     "openai": "^4.19.0",
     "puppeteer": "^21.5.2",
