--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,12 +20,15 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tldraw/tldraw": "2.0.0-canary.699502d8c479",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "config": "workspace:*",
     "lucide-react": "^0.293.0",
     "react": "^18.2.0",
