--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,9 @@
     "@tldraw/tldraw": "2.0.0-canary.699502d8c479",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "database": "workspace:*",
     "lucide-react": "^0.293.0",
+    "luxon": "^3.4.4",
     "million": "^2.6.4",
     "next": "^14.0.3",
     "react": "^18.2.0",
@@ -24,6 +26,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.7",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
