--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "database": "workspace:*",
+    "diff2html": "^3.4.45",
+    "highlight.js": "^11.9.0",
     "lucide-react": "^0.293.0",
     "luxon": "^3.4.4",
     "million": "^2.6.4",
