--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.4",
     "@types/luxon": "^3.3.7",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
