--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,7 @@
     "million": "^2.6.4",
     "next": "^14.0.3",
     "react": "^18.2.0",
-    "react-code-blocks": "^0.1.5",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "ui": "workspace:*",
     "zod": "^3.22.4"
@@ -32,6 +32,7 @@
     "@types/luxon": "^3.3.7",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.16",
     "config": "workspace:*",
